@@ -1,21 +1,24 @@
 package com.sprint.mission.discodeit.service.basic;
 
-import com.sprint.mission.discodeit.dto.message.MessageCreateRequest;
-import com.sprint.mission.discodeit.dto.message.MessageResult;
-import com.sprint.mission.discodeit.dto.message.MessageUpdateRequest;
+import com.sprint.mission.discodeit.dto.request.BinaryContentCreateRequest;
+import com.sprint.mission.discodeit.dto.request.MessageCreateRequest;
+import com.sprint.mission.discodeit.dto.request.MessageUpdateRequest;
 import com.sprint.mission.discodeit.entity.Message;
 import com.sprint.mission.discodeit.repository.BinaryContentRepository;
 import com.sprint.mission.discodeit.repository.ChannelRepository;
 import com.sprint.mission.discodeit.repository.MessageRepository;
 import com.sprint.mission.discodeit.repository.UserRepository;
 import com.sprint.mission.discodeit.service.MessageService;
+import lombok.RequiredArgsConstructor;
+import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.NoSuchElementException;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
+@Service
+@RequiredArgsConstructor
 public class BasicMessageService implements MessageService {
 
     private final MessageRepository messageRepository;
@@ -23,142 +26,51 @@ public class BasicMessageService implements MessageService {
     private final UserRepository userRepository;
     private final BinaryContentRepository binaryContentRepository;
 
-    public BasicMessageService(
-            MessageRepository messageRepository,
-            ChannelRepository channelRepository,
-            UserRepository userRepository,
-            BinaryContentRepository binaryContentRepository
-    ) {
-        this.messageRepository = messageRepository;
-        this.channelRepository = channelRepository;
-        this.userRepository = userRepository;
-        this.binaryContentRepository = binaryContentRepository;
-    }
-
-    // --------------------
-    // create (DTO 파라미터 + (선택) 첨부파일)
-    // --------------------
     @Override
-    public MessageResult create(MessageCreateRequest request) {
-        validateCreate(request);
+    public Message create(MessageCreateRequest req, List<BinaryContentCreateRequest> files) {
+        UUID channelId = req.channelId();   // ✅ 컨트롤러가 URL 값으로 덮어준 값
+        UUID authorId = req.authorId();
 
-        if (!channelRepository.existsById(request.channelId())) {
-            throw new NoSuchElementException("channel not found: " + request.channelId());
+        if (!channelRepository.existsById(channelId)) {
+            throw new NoSuchElementException("Channel with id " + channelId + " does not exist.");
         }
-        if (!userRepository.existsById(request.authorId())) {
-            throw new NoSuchElementException("user not found: " + request.authorId());
+        if (!userRepository.existsById(authorId)) {
+            throw new NoSuchElementException("User with id " + authorId + " does not exist.");
         }
 
-        // 첨부파일(선택): null이면 빈 리스트로 통일
-        List<UUID> attachmentIds = (request.attachmentIds() == null)
-                ? List.of()
-                : new ArrayList<>(request.attachmentIds());
+        // 첨부가 아직 미구현/단순화 상태면 일단 빈 리스트로
+        List<UUID> attachmentIds = Collections.emptyList();
 
-        Message message = new Message(request.content(), request.channelId(), request.authorId());
-        message.setAttachmentIds(attachmentIds);
+        Message message = new Message(
+                req.content(),
+                channelId,
+                authorId,
+                attachmentIds
+        );
 
-        Message saved = messageRepository.save(message);
-        return toResult(saved);
+        return messageRepository.save(message);
     }
 
-    // --------------------
-    // find (id로 조회)
-    // --------------------
     @Override
-    public MessageResult find(UUID messageId) {
-        if (messageId == null) throw new IllegalArgumentException("messageId is null");
-
-        Message message = messageRepository.findById(messageId)
-                .orElseThrow(() -> new NoSuchElementException("message not found: " + messageId));
-
-        return toResult(message);
+    public Message find(UUID messageId) {
+        return messageRepository.findById(messageId)
+                .orElseThrow(() -> new NoSuchElementException("Message with id " + messageId + " does not exist."));
     }
 
-    // --------------------
-    // findAllByChannelId (특정 채널의 메시지만)
-    // --------------------
     @Override
-    public List<MessageResult> findAllByChannelId(UUID channelId) {
-        if (channelId == null) throw new IllegalArgumentException("channelId is null");
-
-        return messageRepository.findAll().stream()
-                .filter(m -> channelId.equals(m.getChannelId()))
-                .map(this::toResult)
-                .collect(Collectors.toList());
+    public List<Message> findAllByChannelId(UUID channelId) {
+        return messageRepository.findAllByChannelId(channelId);
     }
 
-    // --------------------
-    // update (DTO로 id + 변경값 그룹화)
-    // --------------------
     @Override
-    public MessageResult update(MessageUpdateRequest request) {
-        validateUpdate(request);
-
-        Message message = messageRepository.findById(request.id())
-                .orElseThrow(() -> new NoSuchElementException("message not found: " + request.id()));
-
-        // content가 null이면 수정하지 않음
-        if (request.content() != null) {
-            message.update(request.content());
-        }
-
-        Message saved = messageRepository.save(message);
-        return toResult(saved);
+    public Message update(UUID messageId, MessageUpdateRequest request) {
+        Message message = find(messageId);
+        message.update(request.newContent());
+        return messageRepository.save(message);
     }
 
-    // --------------------
-    // delete (연관 삭제: 첨부파일 BinaryContent)
-    // --------------------
     @Override
     public void delete(UUID messageId) {
-        if (messageId == null) throw new IllegalArgumentException("messageId is null");
-
-        Message message = messageRepository.findById(messageId)
-                .orElseThrow(() -> new NoSuchElementException("message not found: " + messageId));
-
-        List<UUID> attachmentIds = message.getAttachmentIds();
-        if (attachmentIds != null) {
-            for (UUID id : attachmentIds) {
-                if (id != null) {
-                    binaryContentRepository.deleteById(id);
-                }
-            }
-        }
-
         messageRepository.deleteById(messageId);
-    }
-
-    // --------------------
-    // helper methods
-    // --------------------
-    private void validateCreate(MessageCreateRequest request) {
-        if (request == null) throw new IllegalArgumentException("request is null");
-        if (isBlank(request.content())) throw new IllegalArgumentException("content is blank");
-        if (request.channelId() == null) throw new IllegalArgumentException("channelId is null");
-        if (request.authorId() == null) throw new IllegalArgumentException("authorId is null");
-    }
-
-    private void validateUpdate(MessageUpdateRequest request) {
-        if (request == null) throw new IllegalArgumentException("request is null");
-        if (request.id() == null) throw new IllegalArgumentException("id is null");
-        if (request.content() != null && isBlank(request.content())) {
-            throw new IllegalArgumentException("content is blank");
-        }
-    }
-
-    private MessageResult toResult(Message message) {
-        return new MessageResult(
-                message.getId(),
-                message.getContent(),
-                message.getChannelId(),
-                message.getAuthorId(),
-                message.getAttachmentIds(),
-                message.getCreatedAt(),
-                message.getUpdatedAt()
-        );
-    }
-
-    private boolean isBlank(String s) {
-        return s == null || s.isBlank();
     }
 }
